--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "luxon": "^3.4.4",
     "mavon-editor": "^3.0.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
