--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -11,17 +11,16 @@ spring.datasource.password=qwerty
 spring.mvc.hiddenmethod.filter.enabled=true
 
 #Logging
-logging.level.root=INFO
-logging.pattern.console=%clr(%d{HH:mm:ss.SSS}){cyan} %clr([%p]) <%thread> %logger{36} - %clr(%msg%n){yellow}
-logging.pattern.file=[%d{HH:mm:ss.SSS}] [%p] <%thread> %logger{36} - %msg%n
-logging.level.org.springframework.web=INFO
+#logging.level.root=INFO
+#logging.pattern.console=%clr(%d{HH:mm:ss.SSS}){cyan} %clr([%p]) <%thread> %logger{36} - %clr(%msg%n){yellow}
+#logging.pattern.file=[%d{HH:mm:ss.SSS}] [%p] <%thread> %logger{36} - %msg%n
+#logging.level.org.springframework.web=INFO
 #logging.level.org.hibernate=error
 
-logging.file.path=logs
+#logging.file.path=logs
 
 #Other
 spring.jpa.open-in-view=false
 
 server.error.whitelabel.enabled=false
 spring.mvc.throw-exception-if-no-handler-found=true
-
