security is added

--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -24,3 +24,10 @@ spring.jpa.open-in-view=false
 
 server.error.whitelabel.enabled=false
 spring.mvc.throw-exception-if-no-handler-found=true
+spring.jpa.hibernate.ddl-auto=update
+
+security.jwt.secret-key=verySecretOmg
+
+spring.profiles.active=no-security
+
+
