add safe version for BoardController - SafeBoardController (/api/s)

--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -28,6 +28,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 security.jwt.secret-key=verySecretOmg
 
-spring.profiles.active=no-security
+#spring.profiles.active=no-security
+spring.profiles.active=with-security
 
 
