--- a/front/package.json
+++ b/front/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.6.2",
     "luxon": "^3.4.4",
     "mavon-editor": "^3.0.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
+    "vuelidate": "^0.7.7",
     "vuetify": "^3.4.8"
   },
   "devDependencies": {
