--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "mavon-editor": "^3.0.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
+    "vue-simple-calendar": "^7.1.0",
     "vuetify": "^3.4.8"
   },
   "devDependencies": {
